DEFENSA/fuente/GramJSON/JSONParser.java
// Generated from ./fuente/GramJSON/JSONParser.g4 by ANTLR 4.7.1

package fuente.GramJSON;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JSONParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		GRAPH=1, TREE=2, PROPERTIES=3, USEDBY=4, LANGUAGEDATA=5, KW_ID=6, KW_NAME=7, 
		KW_GENDER=8, KW_NUMBER=9, KW_WORD_TYPE=10, KW_TYPE_OF=11, KW_IS_LIST=12, 
		KW_OPTIONAL=13, KW_MULTIPLICITY_MAX=14, KW_MULTIPLICITY_MIN=15, KW_REVERSE_NAME=16, 
		KW_FROM=17, KW_TO=18, KW_INHERITS=19, LABEL=20, LABEL_REVERSENAME=21, 
		ESTADO_CONTEXT=22, BOOLEANO=23, TEXTO=24, ABRIR_LLAVE=25, CERRAR_LLAVE=26, 
		ABRIR_CORCHETE=27, CERRAR_CORCHETE=28, COMA=29, DOSPUNTOS=30, WS=31, CERRARCONTEXT=32, 
		INFO=33;
	public static final int
		RULE_init = 0, RULE_objeto = 1, RULE_nombre_objeto = 2, RULE_cuerpo_objeto = 3, 
		RULE_nombre_label = 4, RULE_label_clave = 5, RULE_label_valor = 6, RULE_contenido_label = 7, 
		RULE_cuerpo_label = 8, RULE_nombre_label_reversename = 9, RULE_label_reversename_clave = 10, 
		RULE_label_reversename_valor = 11, RULE_contenido_label_reversename = 12, 
		RULE_cuerpo_label_reversename = 13, RULE_atributo = 14, RULE_nombre_atributo = 15, 
		RULE_valor_atributo = 16, RULE_lista = 17, RULE_nombre_lista = 18, RULE_cuerpo_lista = 19, 
		RULE_graph = 20, RULE_cuerpo_graph = 21, RULE_properties = 22, RULE_valor_propertie = 23, 
		RULE_cuerpo_properties = 24, RULE_arbol = 25, RULE_cuerpo_tree = 26, RULE_usedby = 27, 
		RULE_valor_usedby = 28, RULE_cuerpo_usedby = 29, RULE_languajedata = 30, 
		RULE_cuerpo_languagedata = 31, RULE_cadena = 32, RULE_kw_id = 33, RULE_valor_id = 34, 
		RULE_kw_name = 35, RULE_valor_name = 36, RULE_kw_geder = 37, RULE_valor_gender = 38, 
		RULE_kw_number = 39, RULE_valor_number = 40, RULE_kw_word_type = 41, RULE_valor_word_type = 42, 
		RULE_kw_type_of = 43, RULE_valor_type_of = 44, RULE_kw_is_list = 45, RULE_valor_is_list = 46, 
		RULE_kw_optional = 47, RULE_valor_optional = 48, RULE_kw_multiplicity_max = 49, 
		RULE_valor_multiplicity_max = 50, RULE_kw_multiplicity_min = 51, RULE_valor_multiplicity_min = 52, 
		RULE_kw_reverse_name = 53, RULE_valor_reverse_name = 54, RULE_kw_from = 55, 
		RULE_valor_from = 56, RULE_kw_to = 57, RULE_kw_inherits = 58, RULE_valor_inherits = 59, 
		RULE_valor_to = 60, RULE_estado_context = 61;
	public static final String[] ruleNames = {
		"init", "objeto", "nombre_objeto", "cuerpo_objeto", "nombre_label", "label_clave", 
		"label_valor", "contenido_label", "cuerpo_label", "nombre_label_reversename", 
		"label_reversename_clave", "label_reversename_valor", "contenido_label_reversename", 
		"cuerpo_label_reversename", "atributo", "nombre_atributo", "valor_atributo", 
		"lista", "nombre_lista", "cuerpo_lista", "graph", "cuerpo_graph", "properties", 
		"valor_propertie", "cuerpo_properties", "arbol", "cuerpo_tree", "usedby", 
		"valor_usedby", "cuerpo_usedby", "languajedata", "cuerpo_languagedata", 
		"cadena", "kw_id", "valor_id", "kw_name", "valor_name", "kw_geder", "valor_gender", 
		"kw_number", "valor_number", "kw_word_type", "valor_word_type", "kw_type_of", 
		"valor_type_of", "kw_is_list", "valor_is_list", "kw_optional", "valor_optional", 
		"kw_multiplicity_max", "valor_multiplicity_max", "kw_multiplicity_min", 
		"valor_multiplicity_min", "kw_reverse_name", "valor_reverse_name", "kw_from", 
		"valor_from", "kw_to", "kw_inherits", "valor_inherits", "valor_to", "estado_context"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'\"@context\"'", 
		null, null, "'{'", "'}'", "'['", "']'", "','", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "GRAPH", "TREE", "PROPERTIES", "USEDBY", "LANGUAGEDATA", "KW_ID", 
		"KW_NAME", "KW_GENDER", "KW_NUMBER", "KW_WORD_TYPE", "KW_TYPE_OF", "KW_IS_LIST", 
		"KW_OPTIONAL", "KW_MULTIPLICITY_MAX", "KW_MULTIPLICITY_MIN", "KW_REVERSE_NAME", 
		"KW_FROM", "KW_TO", "KW_INHERITS", "LABEL", "LABEL_REVERSENAME", "ESTADO_CONTEXT", 
		"BOOLEANO", "TEXTO", "ABRIR_LLAVE", "CERRAR_LLAVE", "ABRIR_CORCHETE", 
		"CERRAR_CORCHETE", "COMA", "DOSPUNTOS", "WS", "CERRARCONTEXT", "INFO"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JSONParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JSONParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public List<ObjetoContext> objeto() {
			return getRuleContexts(ObjetoContext.class);
		}
		public ObjetoContext objeto(int i) {
			return getRuleContext(ObjetoContext.class,i);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitInit(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LABEL) | (1L << LABEL_REVERSENAME) | (1L << ESTADO_CONTEXT) | (1L << BOOLEANO) | (1L << TEXTO) | (1L << ABRIR_LLAVE))) != 0)) {
				{
				{
				setState(124);
				objeto();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjetoContext extends ParserRuleContext {
		public Estado_contextContext estado_context() {
			return getRuleContext(Estado_contextContext.class,0);
		}
		public Cuerpo_labelContext cuerpo_label() {
			return getRuleContext(Cuerpo_labelContext.class,0);
		}
		public Nombre_labelContext nombre_label() {
			return getRuleContext(Nombre_labelContext.class,0);
		}
		public TerminalNode COMA() { return getToken(JSONParser.COMA, 0); }
		public Cuerpo_label_reversenameContext cuerpo_label_reversename() {
			return getRuleContext(Cuerpo_label_reversenameContext.class,0);
		}
		public Nombre_label_reversenameContext nombre_label_reversename() {
			return getRuleContext(Nombre_label_reversenameContext.class,0);
		}
		public Cuerpo_objetoContext cuerpo_objeto() {
			return getRuleContext(Cuerpo_objetoContext.class,0);
		}
		public Nombre_objetoContext nombre_objeto() {
			return getRuleContext(Nombre_objetoContext.class,0);
		}
		public TerminalNode DOSPUNTOS() { return getToken(JSONParser.DOSPUNTOS, 0); }
		public ObjetoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objeto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterObjeto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitObjeto(this);
		}
	}

	public final ObjetoContext objeto() throws RecognitionException {
		ObjetoContext _localctx = new ObjetoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_objeto);
		int _la;
		try {
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				estado_context();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LABEL) {
					{
					setState(131);
					nombre_label();
					}
				}

				setState(134);
				cuerpo_label();
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(135);
					match(COMA);
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LABEL_REVERSENAME) {
					{
					setState(138);
					nombre_label_reversename();
					}
				}

				setState(141);
				cuerpo_label_reversename();
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(142);
					match(COMA);
					}
				}

				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==BOOLEANO || _la==TEXTO) {
					{
					setState(145);
					nombre_objeto();
					setState(146);
					match(DOSPUNTOS);
					}
				}

				setState(150);
				cuerpo_objeto();
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(151);
					match(COMA);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nombre_objetoContext extends ParserRuleContext {
		public CadenaContext cadena() {
			return getRuleContext(CadenaContext.class,0);
		}
		public Nombre_objetoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombre_objeto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterNombre_objeto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitNombre_objeto(this);
		}
	}

	public final Nombre_objetoContext nombre_objeto() throws RecognitionException {
		Nombre_objetoContext _localctx = new Nombre_objetoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nombre_objeto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			cadena();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cuerpo_objetoContext extends ParserRuleContext {
		public TerminalNode ABRIR_LLAVE() { return getToken(JSONParser.ABRIR_LLAVE, 0); }
		public TerminalNode CERRAR_LLAVE() { return getToken(JSONParser.CERRAR_LLAVE, 0); }
		public List<ObjetoContext> objeto() {
			return getRuleContexts(ObjetoContext.class);
		}
		public ObjetoContext objeto(int i) {
			return getRuleContext(ObjetoContext.class,i);
		}
		public List<AtributoContext> atributo() {
			return getRuleContexts(AtributoContext.class);
		}
		public AtributoContext atributo(int i) {
			return getRuleContext(AtributoContext.class,i);
		}
		public List<ListaContext> lista() {
			return getRuleContexts(ListaContext.class);
		}
		public ListaContext lista(int i) {
			return getRuleContext(ListaContext.class,i);
		}
		public Cuerpo_objetoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo_objeto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterCuerpo_objeto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitCuerpo_objeto(this);
		}
	}

	public final Cuerpo_objetoContext cuerpo_objeto() throws RecognitionException {
		Cuerpo_objetoContext _localctx = new Cuerpo_objetoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cuerpo_objeto);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(ABRIR_LLAVE);
			setState(162); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(162);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(159);
					objeto();
					}
					break;
				case 2:
					{
					setState(160);
					atributo();
					}
					break;
				case 3:
					{
					setState(161);
					lista();
					}
					break;
				}
				}
				setState(164); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GRAPH) | (1L << TREE) | (1L << PROPERTIES) | (1L << USEDBY) | (1L << LANGUAGEDATA) | (1L << KW_ID) | (1L << KW_NAME) | (1L << KW_GENDER) | (1L << KW_NUMBER) | (1L << KW_WORD_TYPE) | (1L << KW_TYPE_OF) | (1L << KW_IS_LIST) | (1L << KW_OPTIONAL) | (1L << KW_MULTIPLICITY_MAX) | (1L << KW_MULTIPLICITY_MIN) | (1L << KW_REVERSE_NAME) | (1L << KW_FROM) | (1L << KW_TO) | (1L << KW_INHERITS) | (1L << LABEL) | (1L << LABEL_REVERSENAME) | (1L << ESTADO_CONTEXT) | (1L << BOOLEANO) | (1L << TEXTO) | (1L << ABRIR_LLAVE) | (1L << ABRIR_CORCHETE))) != 0) );
			setState(166);
			match(CERRAR_LLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nombre_labelContext extends ParserRuleContext {
		public TerminalNode LABEL() { return getToken(JSONParser.LABEL, 0); }
		public Nombre_labelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombre_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterNombre_label(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitNombre_label(this);
		}
	}

	public final Nombre_labelContext nombre_label() throws RecognitionException {
		Nombre_labelContext _localctx = new Nombre_labelContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nombre_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(LABEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Label_claveContext extends ParserRuleContext {
		public CadenaContext cadena() {
			return getRuleContext(CadenaContext.class,0);
		}
		public Label_claveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_clave; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterLabel_clave(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitLabel_clave(this);
		}
	}

	public final Label_claveContext label_clave() throws RecognitionException {
		Label_claveContext _localctx = new Label_claveContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_label_clave);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			cadena();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Label_valorContext extends ParserRuleContext {
		public CadenaContext cadena() {
			return getRuleContext(CadenaContext.class,0);
		}
		public Label_valorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_valor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterLabel_valor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitLabel_valor(this);
		}
	}

	public final Label_valorContext label_valor() throws RecognitionException {
		Label_valorContext _localctx = new Label_valorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_label_valor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			cadena();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Contenido_labelContext extends ParserRuleContext {
		public Label_claveContext label_clave() {
			return getRuleContext(Label_claveContext.class,0);
		}
		public TerminalNode DOSPUNTOS() { return getToken(JSONParser.DOSPUNTOS, 0); }
		public Label_valorContext label_valor() {
			return getRuleContext(Label_valorContext.class,0);
		}
		public TerminalNode COMA() { return getToken(JSONParser.COMA, 0); }
		public Contenido_labelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contenido_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterContenido_label(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitContenido_label(this);
		}
	}

	public final Contenido_labelContext contenido_label() throws RecognitionException {
		Contenido_labelContext _localctx = new Contenido_labelContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_contenido_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			label_clave();
			setState(175);
			match(DOSPUNTOS);
			setState(176);
			label_valor();
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMA) {
				{
				setState(177);
				match(COMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cuerpo_labelContext extends ParserRuleContext {
		public TerminalNode ABRIR_LLAVE() { return getToken(JSONParser.ABRIR_LLAVE, 0); }
		public TerminalNode CERRAR_LLAVE() { return getToken(JSONParser.CERRAR_LLAVE, 0); }
		public List<Contenido_labelContext> contenido_label() {
			return getRuleContexts(Contenido_labelContext.class);
		}
		public Contenido_labelContext contenido_label(int i) {
			return getRuleContext(Contenido_labelContext.class,i);
		}
		public Cuerpo_labelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterCuerpo_label(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitCuerpo_label(this);
		}
	}

	public final Cuerpo_labelContext cuerpo_label() throws RecognitionException {
		Cuerpo_labelContext _localctx = new Cuerpo_labelContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cuerpo_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(ABRIR_LLAVE);
			setState(182); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(181);
				contenido_label();
				}
				}
				setState(184); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==BOOLEANO || _la==TEXTO );
			setState(186);
			match(CERRAR_LLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nombre_label_reversenameContext extends ParserRuleContext {
		public TerminalNode LABEL_REVERSENAME() { return getToken(JSONParser.LABEL_REVERSENAME, 0); }
		public Nombre_label_reversenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombre_label_reversename; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterNombre_label_reversename(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitNombre_label_reversename(this);
		}
	}

	public final Nombre_label_reversenameContext nombre_label_reversename() throws RecognitionException {
		Nombre_label_reversenameContext _localctx = new Nombre_label_reversenameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_nombre_label_reversename);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			match(LABEL_REVERSENAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Label_reversename_claveContext extends ParserRuleContext {
		public CadenaContext cadena() {
			return getRuleContext(CadenaContext.class,0);
		}
		public Label_reversename_claveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_reversename_clave; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterLabel_reversename_clave(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitLabel_reversename_clave(this);
		}
	}

	public final Label_reversename_claveContext label_reversename_clave() throws RecognitionException {
		Label_reversename_claveContext _localctx = new Label_reversename_claveContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_label_reversename_clave);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			cadena();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Label_reversename_valorContext extends ParserRuleContext {
		public CadenaContext cadena() {
			return getRuleContext(CadenaContext.class,0);
		}
		public Label_reversename_valorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_reversename_valor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterLabel_reversename_valor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitLabel_reversename_valor(this);
		}
	}

	public final Label_reversename_valorContext label_reversename_valor() throws RecognitionException {
		Label_reversename_valorContext _localctx = new Label_reversename_valorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_label_reversename_valor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			cadena();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Contenido_label_reversenameContext extends ParserRuleContext {
		public Label_reversename_claveContext label_reversename_clave() {
			return getRuleContext(Label_reversename_claveContext.class,0);
		}
		public TerminalNode DOSPUNTOS() { return getToken(JSONParser.DOSPUNTOS, 0); }
		public Label_reversename_valorContext label_reversename_valor() {
			return getRuleContext(Label_reversename_valorContext.class,0);
		}
		public TerminalNode COMA() { return getToken(JSONParser.COMA, 0); }
		public Contenido_label_reversenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contenido_label_reversename; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).enterContenido_label_reversename(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONParserListener ) ((JSONParserListener)listener).exitContenido_label_reversename(this);
		}
	}

	public final Contenido_label_reversenameContext contenido_label_reversename() throws RecognitionException {
		Contenido_label_reversenameContext _localctx = new Contenido_label_reversenameContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_contenido_label_reversename);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			label_reversename_clave();
			setState(195);
			match(DOSPUNTOS);
			setState(196);
			label_reversename_valor();
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMA) {
				{
				setState(197);
				match(COMA);
				}
			}
